--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,19 +9,21 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network)
 
 set(PROJECT_SOURCES
+    mainwindow.h mainwindow.cpp mainwindow.ui
+    realslider.h realslider.cpp
+    network.h network.cpp
+
     main.cpp
 )
 
 add_executable(${PROJECT_NAME}
     ${PROJECT_SOURCES}
-    mainwindow.h mainwindow.cpp mainwindow.ui
-    realslider.h realslider.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Network)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
