network for client

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -9,12 +9,13 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets SvgWidgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets SvgWidgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets SvgWidgets Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets SvgWidgets Network)
 
 set(PROJECT_SOURCES
     mainwindow.h mainwindow.cpp mainwindow.ui
     aspectratiowidget.h aspectratiowidget.cpp
+    network.h network.cpp
 
     main.cpp
 
@@ -25,6 +26,8 @@ add_executable(${PROJECT_NAME}
     ${PROJECT_SOURCES}
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::SvgWidgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
+                                              Qt${QT_VERSION_MAJOR}::SvgWidgets
+                                              Qt${QT_VERSION_MAJOR}::Network)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
